--- a/css/12bool.css
+++ b/css/12bool.css
@@ -18,6 +18,13 @@
     width: 100%;
 }
 
+
+/**DISPLAY FLEX**/
+.d-flex{
+    display: flex;
+}
+
+
 /**DEFOULT ROW**/
 
 .row{
@@ -28,7 +35,7 @@
 
 /**DEFOULT COL**/
 
-[class^=col]{
+[class^='col']{
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: auto;
@@ -45,4 +52,73 @@
     flex-basis: calc(100% / 12 * 2);
     max-width: calc(100% / 12 * 2);
 }
+.col-3{
+    flex-basis: calc(100% / 12 * 3);
+    max-width: calc(100% / 12 * 3);
+}
+.col-4{
+    flex-basis: calc(100% / 12 * 4);
+    max-width: calc(100% / 12 * 4);
+}
+.col-5{
+    flex-basis: calc(100% / 12 * 5);
+    max-width: calc(100% / 12 * 5);
+}
+.col-6{
+    flex-basis: calc(100% / 12 * 6);
+    max-width: calc(100% / 12 * 6);
+}
+.col-6{
+    flex-basis: calc(100% / 12 * 6);
+    max-width: calc(100% / 12 * 6);
+}
+.col-7{
+    flex-basis: calc(100% / 12 * 7);
+    max-width: calc(100% / 12 * 7);
+}
+.col-8{
+    flex-basis: calc(100% / 12 * 8);
+    max-width: calc(100% / 12 * 8);
+}
+.col-9{
+    flex-basis: calc(100% / 12 * 9);
+    max-width: calc(100% / 12 * 9);
+}
+.col-10{
+    flex-basis: calc(100% / 12 * 10);
+    max-width: calc(100% / 12 * 10);
+}
+.col-11{
+    flex-basis: calc(100% / 12 * 11);
+    max-width: calc(100% / 12 * 11);
+}
+.col-12{
+    flex-basis: calc(100% );
+    max-width: calc(100% );
+}
 
+/************/
+/**UTILITIES-ALLINEAMENTO**/
+
+.content-start{
+    justify-content: flex-start;
+    text-align: start;
+}
+.content-center{
+    justify-content: center;
+    text-align: center;
+}
+.content-end{
+    justify-content: flex-end;
+    text-align: end;
+}
+
+.align-start{
+    align-items: flex-start;
+}
+.align-center{
+    align-items: center;
+}
+.align-end{
+    align-items: flex-end;
+}
