--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
     color: white;
 }
 
+[class^=col].big{
+    height: 140px;
+}
+
 .nested{
     background-color: rgb(26, 192, 115);
     line-height: 40px;
